fix: Increase spacing between comments and infobox

--- a/assets/styles/refresh/objects/_review-page.scss
+++ b/assets/styles/refresh/objects/_review-page.scss
@@ -14,7 +14,7 @@
 
     @supports (display: grid) {
       display: grid;
-      grid-column-gap: 1rem;
+      grid-column-gap: 2rem;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: auto;
       grid-template-areas:
